--- a/styles.scss
+++ b/styles.scss
@@ -141,6 +141,10 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: auto;
+
+      h3 {
+        margin: 0;
+      }
     }
   }
 }
